--- a/app/src/main/res/layout/fac_announc_add_layout.xml
+++ b/app/src/main/res/layout/fac_announc_add_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/Rl_addAnno"
     android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -112,11 +113,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="33dp"
-        android:text="Title"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_marginTop="50dp"
+        android:text="Title : "
+        android:textAlignment="viewEnd"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -124,11 +126,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/textView7"
+        android:layout_alignRight="@+id/textView7"
         android:layout_below="@+id/et_NotTitle"
-        android:layout_marginTop="28dp"
-        android:text="Batch"
+        android:layout_marginTop="30dp"
+        android:text="Batch : "
+        android:textAlignment="viewEnd"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -136,11 +139,12 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="35dp"
-        android:text="Date"
+        android:layout_alignEnd="@+id/textView2"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_below="@+id/spinner2"
+        android:layout_marginTop="30dp"
+        android:text="Date : "
+        android:textAlignment="viewEnd"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -151,8 +155,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView6"
-        android:layout_marginTop="33dp"
-        android:text="Description"
+        android:layout_marginTop="30dp"
+        android:text="Description : "
+        android:textAlignment="viewEnd"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -160,18 +165,19 @@
         android:id="@+id/et_NotTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView"
-        android:layout_marginLeft="34dp"
-        android:layout_marginStart="34dp"
-        android:layout_toEndOf="@+id/textView7"
-        android:layout_toRightOf="@+id/textView7"
+        android:layout_alignBaseline="@+id/textView"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:ems="10"
         android:hint="Enter Title"
         android:inputType="textPersonName" />
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/et_NotTitle"
         android:layout_alignStart="@+id/et_NotTitle"
@@ -181,6 +187,7 @@
         android:id="@+id/et_datepicker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView6"
         android:layout_alignLeft="@+id/spinner2"
         android:layout_alignStart="@+id/spinner2"
         android:layout_alignTop="@+id/textView6"
@@ -191,9 +198,10 @@
         android:id="@+id/et_notDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
         android:layout_alignLeft="@+id/et_datepicker1"
         android:layout_alignStart="@+id/et_datepicker1"
-        android:layout_alignTop="@+id/textView7"
         android:ems="10"
         android:hint="Enter Decription"
         android:inputType="textMultiLine" />
