--- a/app/src/main/res/layout/activity_fac__announc_tabb.xml
+++ b/app/src/main/res/layout/activity_fac__announc_tabb.xml
@@ -2,13 +2,12 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content_ann_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/FaPor"
-    tools:context="in.classguru.classguru.FacPortionActivity">
+    tools:context="in.classguru.classguru.Fac_Announc_tabbActivity">
 
-    <include layout="@layout/fac_portion_layout" />
-
+    <include layout="@layout/fac_announc_tabblayout" />
     <android.support.design.widget.NavigationView
 
         android:id="@+id/navSideBar"
@@ -22,4 +21,5 @@
         app:menu="@menu/faculty_drawermenu">
 
     </android.support.design.widget.NavigationView>
+
 </android.support.v4.widget.DrawerLayout>
