--- a/app/src/main/res/layout/activity_fee_tabed.xml
+++ b/app/src/main/res/layout/activity_fee_tabed.xml
@@ -2,11 +2,12 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content_feeDrawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/FaAn"
-    tools:context="in.classguru.classguru.FacAnnouncActivity">
-<include layout="@layout/fac_announc_layout" />
+    tools:context="in.classguru.classguru.Fee_tabedActivity">
+
+    <include layout="@layout/fee_content_layout" />
     <android.support.design.widget.NavigationView
 
         android:id="@+id/navSideBar"
@@ -17,7 +18,9 @@
         app:headerLayout="@layout/header"
         app:itemIconTint="@color/darkgrey"
         app:itemTextColor="@color/darkgrey"
-        app:menu="@menu/faculty_drawermenu">
+        app:menu="@menu/drawermenu">
 
     </android.support.design.widget.NavigationView>
+
+
 </android.support.v4.widget.DrawerLayout>
