--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -20,11 +20,12 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/textView17"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="55dp"
+            android:layout_alignRight="@+id/textView17"
+            android:layout_marginTop="59dp"
             android:text="Batch :"
+            android:textAlignment="viewEnd"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -32,11 +33,12 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/textView3"
+            android:layout_alignRight="@+id/textView3"
             android:layout_below="@+id/textView3"
-            android:layout_marginTop="31dp"
+            android:layout_marginTop="28dp"
             android:text="Subject :"
+            android:textAlignment="viewEnd"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -44,11 +46,12 @@
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/textView17"
+            android:layout_alignRight="@+id/textView17"
             android:layout_below="@+id/textView10"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="27dp"
             android:text="Total Topics :"
+            android:textAlignment="viewEnd"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -58,8 +61,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
+            android:layout_below="@+id/et_totalTopicTab"
+            android:layout_marginTop="31dp"
             android:text="Remain Topics :"
+            android:textAlignment="viewEnd"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -67,11 +72,12 @@
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/textView19"
+            android:layout_alignRight="@+id/textView19"
             android:layout_below="@+id/et_remTopicTab"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="27dp"
             android:text="Topics Name :"
+            android:textAlignment="viewEnd"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -84,6 +90,7 @@
             android:layout_below="@+id/textView18"
             android:layout_marginTop="35dp"
             android:text="Remain Topics :"
+            android:textAlignment="viewEnd"
             android:textSize="16sp"
             android:textStyle="bold" />
 
