--- a/app/src/main/res/layout/portion_listview_layout.xml
+++ b/app/src/main/res/layout/portion_listview_layout.xml
@@ -2,47 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:orientation="vertical">
-
     <LinearLayout
 
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_Portionsubject"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Subject"
             android:textAlignment="center"
             android:textSize="15sp"
-            android:textStyle="bold" />
+             />
 
         <TextView
+            android:id="@+id/tv_topic"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Topic Name"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textAlignment="center" />
 
         <TextView
+            android:id="@+id/tv_complete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Completed"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:textAlignment="center" />
 
-        </LinearLayout>
-
-
-    <ListView
-        android:id="@+id/lv_portion"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    </LinearLayout>
 
 </LinearLayout>
