--- a/app/src/main/res/layout/fac_profile1.xml
+++ b/app/src/main/res/layout/fac_profile1.xml
@@ -1,31 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorlayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    app:expandedTitleMarginStart="70dp">
+    app:expandedTitleMarginStart="70dp"
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_layout"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_width="fill_parent"
-        android:layout_height="230dp">
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:fitsSystemWindows="true"
-            android:id="@+id/CollapsingToolbarLayout1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
+
+            <!--<ImageView
                 android:id="@+id/profile_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:cropToPadding="true"
-                />
+                />-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar1"
@@ -43,13 +34,8 @@
             </android.support.v7.widget.Toolbar>
 
 
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
         <RelativeLayout
             android:layout_weight="1"
             android:background="@color/white"
@@ -119,8 +105,8 @@
             </ListView>
 
         </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
 
 
-</android.support.design.widget.CoordinatorLayout>
+
+</LinearLayout>
 
