--- a/app/src/main/res/layout/profile_row_layout.xml
+++ b/app/src/main/res/layout/profile_row_layout.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_weight="1"
         android:text="Name"
+        android:textAlignment="textEnd"
+        android:textColor="@color/darkgrey"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/text3"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_weight="1.5"
+        android:text=":"
+        android:textAlignment="center"
         android:textColor="@color/darkgrey"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -16,8 +29,8 @@
         android:id="@+id/text2"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_weight="1"
         android:text="Akshay"
         android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textSize="16sp" />
 </LinearLayout>
