--- a/app/src/main/res/menu/faculty_drawermenu.xml
+++ b/app/src/main/res/menu/faculty_drawermenu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/profile" android:title="Profile" android:icon="@drawable/ic_user" android:onClick="OnFacProfile"/>
     <item android:id="@+id/fee" android:title="Salary Details" android:icon="@drawable/ic_wallet" android:onClick="OnFacSal"/>
     <item android:id="@+id/attend" android:title="My Attendance" android:icon="@drawable/ic_attendance" android:onClick="OnFacAttend" />
@@ -10,4 +11,9 @@
     <item android:id="@+id/portion_details" android:title="Portion Details" android:icon="@drawable/ic_testdetails"/>
     <item android:id="@+id/announcements" android:title="Announcements" android:icon="@drawable/ic_announcement"/>-->
     <item android:id="@+id/logout" android:icon="@drawable/ic_logout" android:title="Logout" android:onClick="OnFacLogout" />
+
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
